out.txt
   Compiling aoc_2024 v0.1.0 (/home/kevin/01_rust/09_aoc)
error[E0308]: mismatched types
  --> src/solutions/p17/b.rs:22:23
   |
22 |         machine.reset(register_a as u128, 0, 0);
   |                 ----- ^^^^^^^^^^^^^^^^^^ expected `u64`, found `u128`
   |                 |
   |                 arguments to this method are incorrect
   |
note: method defined here
  --> src/solutions/p17/machine.rs:79:12
   |
79 |     pub fn reset(&mut self, register_a: u64, register_b: u64, register_c: u64) {
   |            ^^^^^            ---------------
help: you can convert a `u128` to a `u64` and panic if the converted value doesn't fit
   |
22 |         machine.reset((register_a as u128).try_into().unwrap(), 0, 0);
   |                       +                  +++++++++++++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `aoc_2024` (bin "aoc_2024") due to 1 previous error
